--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,9 +25,43 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 } */
 
+.top-title {
+  margin-bottom: 3rem;
+}
+
 .app-name {
-  margin-bottom: 2rem;
   font-size: 3rem;
   letter-spacing: 0.2rem;
   color: #292929;
+}
+
+.tag-line {
+  font-size: 1.1rem;
+  letter-spacing: 0.2rem;
+  color: #949494;
+}
+
+.nav-bar {
+  border-bottom: 1px solid #e9e9e9;
+}
+
+.header-top-link {
+  font-size: 1.5rem;
+  letter-spacing: 0.1rem;
+}
+
+.header-about-link {
+  font-size: 1.3rem;
+  letter-spacing: 0.06rem;
+}
+
+.header-el {
+  color: #292929;
+  transition: background-color 0.15s ease-out;
+  border-radius: 0.3rem;
+  text-decoration: none;
+}
+
+.header-el:hover {
+  background-color: #e9e9e9;
 }
