--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 @import 'tailwindcss';
-@import "tw-animate-css";
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -75,6 +75,12 @@ body {
 
 .header-el:hover {
   background-color: #e9e9e9;
+}
+
+.nav-current {
+  background-color: #e9e9e9;
+  border-radius: 0.3rem;
+  text-decoration: none;
 }
 
 :root {
