#43 トレーニング一覧ページのスタイルを整える、レスポンシブ対応

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 } */
 
+.font-color-main {
+  color: #292929;
+}
+
 .top-title {
   margin-bottom: 3rem;
 }
